--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <title>Simple React App</title>
-  </head>
-  <body>
-    <div id="root"></div>
-  </body>
+	<head>
+		<meta charset="utf-8" />
+		<title>Slack Clone</title>
+		<script src="https://kit.fontawesome.com/50b3f9045d.js" crossorigin="anonymous"></script>
+		<!-- Main Quill library -->
+		<link rel="stylesheet" href="https://unpkg.com/react-quill@1.3.3/dist/quill.snow.css" />
+	</head>
+	<body>
+		<div id="root"></div>
+	</body>
 </html>
