--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<title>Slack Clone</title>
+		<title>Woof Woof</title>
 		<script src="https://kit.fontawesome.com/50b3f9045d.js" crossorigin="anonymous"></script>
 		<!-- Main Quill library -->
 		<link rel="stylesheet" href="https://unpkg.com/react-quill@1.3.3/dist/quill.snow.css" />
