linkedin featured image update

--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -2,6 +2,12 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
+		<meta name="description" content="Woof Woof App" />
+		<meta name="title" property="og:title" content="Woof Woof" />
+		<meta property="og:type" content="Website" />
+		<meta name="image" property="og:image" content="https://s1ack.s3.us-west-1.amazonaws.com/WoofWoof.png" />
+		<meta name="description" property="og:description" content="Woof Woof App" />
+		<meta name="author" content="Nurs Asanov, Alex Clough, Brent Arimoto, Zane Preudhomme" />
 		<title>Woof Woof</title>
 		<script src="https://kit.fontawesome.com/50b3f9045d.js" crossorigin="anonymous"></script>
 		<!-- Main Quill library -->
